--- a/Konwersatoria/60-js-dom.html
+++ b/Konwersatoria/60-js-dom.html
@@ -54,7 +54,7 @@
         mainContainer.classList.add("red")
         mainContainer.classList.remove("header")
         mainContainer.classList.toggle("header")
-        // sorry, na konwersatoriach popłynąłem z .has() - nie ma tego w classList, trzeba sobie zakodzić;)
+        console.log(mainContainer.classList.contains("header"))
 
         // rozmiary elementu
         // outerWidth/outerHeight - z paskami, toolbarem etc
